@@ -15,16 +15,16 @@ public class VariationUtils {
     /**
      * Generates a list of variation values based on the default language, index, and size.
      */
-    private List<String> generateListString(String defaultLanguage, int index, int size) {
+    private static List<String> generateListString(String defaultLanguage, int index, int size) {
         return IntStream.range(0, size)
                 .mapToObj(i -> String.format("%s_var%s_%s", defaultLanguage, index, i + 1))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Returns the number of variation values for each group based on the total number of variations and groups.
      */
-    public List<Integer> getNumOfValuesOnEachGroup(int numberOfVariations, int numberOfGroups) {
+    private static List<Integer> getNumOfValuesOnEachGroup(int numberOfVariations, int numberOfGroups) {
         if (numberOfGroups == 1) {
             return Collections.singletonList(numberOfVariations);
         }
@@ -34,13 +34,13 @@ public class VariationUtils {
                 .findFirst()
                 .orElse(1);
 
-        return List.of(factor, numberOfVariations / factor);
+        return java.util.List.of(factor, numberOfVariations / factor);
     }
 
     /**
      * Generates a random variation map with variation names and values.
      */
-    public Map<String, List<String>> randomVariationMap(String defaultLanguage) {
+    public static Map<String, List<String>> randomVariationMap(String defaultLanguage) {
         int numberOfGroups = nextInt(MAX_VARIATION_QUANTITY) + 1;
         int numberOfVariations = nextInt(numberOfGroups == 1
                 ? MAX_VARIATION_QUANTITY_FOR_EACH_VARIATION
@@ -61,17 +61,17 @@ public class VariationUtils {
     /**
      * Combines variation values from two lists into a single list with all possible combinations.
      */
-    public List<String> mixVariationValue(List<String> list1, List<String> list2) {
+    private static List<String> mixVariationValue(List<String> list1, List<String> list2) {
         return list1.stream()
                 .flatMap(var1 -> list2.stream()
                         .map(var2 -> String.format("%s|%s", var1, var2)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Creates a variation name string from the keys of the variation map with a specified language prefix.
      */
-    public String getVariationName(Map<String, List<String>> variationMap, String language) {
+    public static String getVariationName(Map<String, List<String>> variationMap, String language) {
         List<String> varNames = new ArrayList<>(variationMap.keySet());
         return varNames.stream()
                 .collect(Collectors.joining("|", String.format("%s_%s", language, varNames.getFirst()), ""));
@@ -80,11 +80,11 @@ public class VariationUtils {
     /**
      * Generates a combined variation list with values prefixed by the specified language.
      */
-    public List<String> getVariationList(Map<String, List<String>> variationMap, String language) {
+    public static List<String> getVariationList(Map<String, List<String>> variationMap, String language) {
         List<List<String>> varValues = new ArrayList<>(variationMap.values());
         List<String> variationList = varValues.getFirst().stream()
                 .map(value -> String.format("%s_%s", language, value))
-                .collect(Collectors.toList());
+                .toList();
 
         for (int i = 1; i < varValues.size(); i++) {
             variationList = mixVariationValue(variationList, varValues.get(i));
@@ -96,7 +96,7 @@ public class VariationUtils {
     /**
      * Generates a combined variation list without a language prefix.
      */
-    public List<String> getVariationList(Map<String, List<String>> variationMap) {
+    public static List<String> getVariationList(Map<String, List<String>> variationMap) {
         List<List<String>> varValues = new ArrayList<>(variationMap.values());
         List<String> variationList = new ArrayList<>(varValues.getFirst());
 
